bugfix: removed image distortion

--- a/src/blocks/_slider.scss
+++ b/src/blocks/_slider.scss
@@ -61,7 +61,9 @@
 
     @media screen and (max-width: 1023px) {
       grid-row: 3 / 4;
+      grid-column: 1 / -1;
       margin-top: 30px;
+      max-width: 100%;
     }
   }
   &__gallery {
@@ -70,7 +72,7 @@
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    column-gap: 40px;
     width: 100%;
     overflow: hidden;
     grid-column: 1 / -1;
@@ -93,8 +95,8 @@
     height: 100%;
     object-fit: contain;
 
-    @media screen and (max-width: 1023px) {
-      max-height: 200px
+    @media screen and (max-width: 767px) {
+      max-height: 270px;
     }
   }
 
